# holonote

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yaml  docs.yaml  jupyterlite.yaml  nightly_lock.yaml  test.yaml
_static/: webpack-macros.html
_static/css/: custom.css
assets/: example.parquet
basics/: Basics.html  Basics_2D.html  MultiPlot.html  index.html
benchmarks/: asv.conf.json
benchmarks/benchmarks/: benchmarks.py
conda/: build.sh
conda/recipe/: meta.yaml
doc/: conf.py  generate_modules.py  index.md  no_header_tutorial.py
doc/_static/_templates/: github_stars.html
doc/_static/css/: custom.css
doc/_templates/: jupyterlitelink.html
doc/apps/: index.md
doc/basics/: index.md
doc/reference_manual/: index.md
doc/tutorial/: index.md
doc/tutotorial/: index.md
docs/: Basics.ipynb
examples/: Basics.ipynb  Basics_2D.ipynb  MultiPlot.ipynb  app_example.ipynb  styling-2d.ipynb  styling.ipynb
examples/apps/: app_example.ipynb
examples/basics/: Basics.ipynb  Basics_2D.ipynb  MultiPlot.ipynb  styling.ipynb
examples/tutorial/: 00_Overview.ipynb  00_overviev.ipynb  01_First_Annotation.ipynb  01_first_annotation.ipynb  02_Multiple_Annotations.ipynb  02_multiple_annotations.ipynb  03_Styling_of_Annotations.ipynb  04_Make_an_App.ipynb  05_Watch_Events.ipynb
examples/tutotorial/: 00_overviev.ipynb  01_first_annotation.ipynb
holonote/: __init__.py  __version.py  _warnings.py
holonote/annotate/: __init__.py  annotator.py  connector.py  display.py  plotting.py  table.py  typing.py  util.py
holonote/app/: __init__.py  panel.py  tabulator.py
holonote/editor/: __init__.py  editors.py
holonote/region/: __init__.py  editors.py
holonote/tests/: annotations.db  conftest.py  test_annotation_table.py  test_annotators.py  test_annotators_advanced.py  test_annotators_basic.py  test_annotators_element.py  test_annotators_interface.py  test_annotators_style.py  test_app.py  test_connectors.py  test_display.py  test_indicators.py  util.py
holonote/tests/benchmark/: test_benchmarks.py
reference_manual/: holonote.__init__.html  holonote.__version.html  holonote._version.html  holonote._warnings.html  holonote.annotate.html  holonote.app.html  holonote.editor.html  index.html  modules.html
scripts/: build_conda.sh  example_testing.py
scripts/conda/: build.sh
scripts/conda/recipe/: meta.yaml
scripts/jupyterlite/: build.sh  extra_packages.json  jupyter_lite_config.json  package-lock.json  package.json  patch_lock.py  update_lock.js
tutorial/: First_Annotation.html  Make_an_App.html  Multiple_Annotations.html  Overview.html  Styling_of_Annotations.html  Watch_Events.html  index.html
